[CSS BugFix] Now main overlap works that it should

--- a/client/scss/project/blocks/page.scss
+++ b/client/scss/project/blocks/page.scss
@@ -26,7 +26,7 @@
 
     &-overlap {
       position: absolute;
-      z-index: 9;
+      z-index: 11;
       top: 0;
       left: 0;
       width: 100%;
